feat: agregados limit/offset a get_all_actas
Necesario para udistrital/arka_cliente#927
