# swagger/swagger.json
@@ -101,6 +101,20 @@
                         "name": "u",
                         "description": "WSO2 User. When specified, acts will be filtered upon the available roles for the specified user",
                         "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "description": "Desired results. Default: -1 (All)",
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "query",
+                        "name": "offset",
+                        "description": "Skip first N results. Default: 0 (none)",
+                        "type": "integer",
+                        "format": "int64"
                     }
                 ],
                 "responses": {
@@ -109,7 +123,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.ActaRecibido"
+                                "$ref": "#/definitions/models.ActaResumen"
                             }
                         }
                     },
@@ -1447,6 +1461,46 @@
                 },
                 "TipoActaId": {
                     "$ref": "#/definitions/models.TipoActa"
+                }
+            }
+        },
+        "models.ActaResumen": {
+            "title": "ActaResumen",
+            "type": "object",
+            "properties": {
+                "Estado": {
+                    "type": "string"
+                },
+                "EstadoActaId": {
+                    "$ref": "#/definitions/models.EstadoActa"
+                },
+                "FechaCreacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "FechaModificacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "FechaVistoBueno": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Observaciones": {
+                    "type": "string"
+                },
+                "PersonaAsignada": {
+                    "type": "string"
+                },
+                "RevisorId": {
+                    "type": "string"
+                },
+                "UbicacionId": {
+                    "type": "string"
                 }
             }
         },
@@ -2792,6 +2846,40 @@
                 "TipoTerrenoId": {
                     "type": "integer",
                     "format": "int64"
+                }
+            }
+        },
+        "models.EstadoActa": {
+            "title": "EstadoActa",
+            "type": "object",
+            "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
+                "CodigoAbreviacion": {
+                    "type": "string"
+                },
+                "Descripcion": {
+                    "type": "string"
+                },
+                "FechaCreacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "FechaModificacion": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Nombre": {
+                    "type": "string"
+                },
+                "NumeroOrden": {
+                    "type": "number",
+                    "format": "double"
                 }
             }
         },
